--- a/package.json
+++ b/package.json
@@ -48,19 +48,18 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.35",
-    "@types/lodash": "^4.17.0",
-    "@types/qs": "^6.9.12",
+    "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
-    "ky": "^1.2.2",
-    "lodash": "^4.17.21",
-    "qs": "^6.12.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
     "@antfu/ni": "^0.21.12",
     "@antfu/utils": "^0.7.7",
+    "@types/cheerio": "^0.22.35",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.19",
+    "@types/qs": "^6.9.12",
     "bumpp": "^9.3.0",
     "eslint": "^8.56.0",
     "esno": "^4.7.0",
@@ -71,14 +70,10 @@
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
     "vite": "^5.1.4",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "@vercel/node": "^2.12.2"
   },
   "lint-staged": {
     "*": "eslint --fix"
-  },
-  "dependencies": {
-    "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
   }
 }
