--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/*.ts",
-      "use": "@vercel/node"
-    }
+    { "src": "api/*.ts", "use": "@vercel/node" }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.ts"
+  "functions": {
+    "api/*.ts": {
+      "memory": 1024,
+      "maxDuration": 10
     }
-  ]
+  }
 }
