--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/*.ts", "use": "@vercel/node" }
+    {
+      "src": "api/*.ts",
+      "use": "@vercel/node"
+    }
   ],
   "functions": {
     "api/*.ts": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 30
     }
   }
 }
